--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://wa.me/6281259592736"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/trisnadw1410/profilecard/?igsh=NGpneGJ1bjFhdWY="><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@trisnadw14?_t=8qjQxmpcOiv&_r=1"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="https://trisnadewi1410.github.io/Trisna-PersonalWebsite/"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
           </div>
       <div class="btn-group"></div>
         <a href="https://drive.google.com/file/d/1lp_bbHDkYIBiZNij-RnHfGGVATO6H6TZ/view?usp=sharing" class="btn" target="_blank">Download CV</a>
@@ -223,7 +223,7 @@
       <a href="https://wa.me/6281259592736"><i class="fa-brands fa-whatsapp"></i></a>
       <a href="https://www.instagram.com/trisnadw1410/profilecard/?igsh=NGpneGJ1bjFhdWY="><i class="fa-brands fa-instagram"></i></a>
       <a href="https://www.tiktok.com/@trisnadw14?_t=8qjQxmpcOiv&_r=1"><i class="fa-brands fa-tiktok"></i></a>
-      <a href="https://trisnadewi1410.github.io/Trisna-PersonalWebsite/"><i class="fa-brands fa-github"></i></a>
+      <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
     </div>
 <ul class="list">
     <li><a href="#">Home</a></li>
